  Fix for rt.cpan.org Ticket #=56810 bug with multiple nested cursor from John Scoles 
  Fix for bug found only on Big-Endian hardware reported by Timothy Everett and others from Charles Jardine 
  Fix for memory leak when using prepared_cached and lobs reported by Mark Bobak and Martin Evans found and fixed by John Scoles

  Added more entries to the Readmes from John Scoles

=head1 Changes in DBD-Oracle 1.24(svn rev 13793)

  Extended precision for OCIDateTimeToText to 6 instead of 0 for embedded types from John Scoles
  Extended support of Oracle Embedded objects from Charles Jardine
  Added support for RowsInCache as RO and RowCacheSize as a set-able value on the Statement Handle. So it would comply with DBI spec By John Scoles with thanks to Martin J. Evans 
  Added extended support for 64 bit clients in Makefile.PL from Ralph Doncaster
  Added extended nvarchar support from Jan Mach
  Added support for the TYPE attribute on bind_col and the new DBI bind_col attributes StrictlyTyped and DiscardString from Martin J. Evans 
  Added ora_ncs_buff_mtpl and environment var ORA_DBD_NCS_BUFFER so we can control the size of the buffer when doing nclob reads
  Fix for rt.cpan.org Ticket #=49741 Oracle.h has commented out params in OCIXMLTypeCreateFromSrc from Kartik Thakore 
  Added from rt.cpan.org Ticket #=49436 Patch to add support for a few Oracle data types to type_info_all from David Hull 
  Added from rt.cpan.org Ticket #=49435 Patch to add support for a few Oracle data types to dbd_describe from David Hull 
  Fix for rt.cpan.org Ticket #=49331 Bad code example in POD from John Scoles
  Added support for looking up OCI_DTYPE_PARAM Attributes
  Added support for looking up csform values 
  Fix for rt.cpan.org Ticket #=46763,46998 enhancement -Rowcache size is now being properly implemented with row fetch buffer from John Scoles 