@@ -9,9 +9,7 @@ my $script = <<'SCRIPT';
 # Copyright (c) 1999 Alan Burlison
 #
 # You may distribute under the terms of either the GNU General Public License
-# or the Artistic License, as specified in the Perl README file, with the
-# exception that it cannot be placed on a CD-ROM or similar media for commercial
-# distribution without the prior approval of the author.
+# or the Artistic License, as specified in the Perl README file.
 #
 # This code is provided with no warranty of any kind, and is used entirely at
 # your own risk.
@@ -161,9 +159,7 @@ my $msg = <<EOM;
                             Alan.Burlison\@uk.sun.com
 
  You may distribute under the terms of either the GNU General Public License
- or the Artistic License, as specified in the Perl README file, with the
- exception that it cannot be placed on a CD-ROM or similar media for commercial
- distribution without the prior approval of the author.
+ or the Artistic License, as specified in the Perl README file.
 
  This code is provided with no warranty of any kind, and is used entirely at
  your own risk.
@@ -1784,9 +1780,7 @@ Support questions and suggestions can be directed to Alan.Burlison@uk.sun.com
 Copyright (c) 1999 Alan Burlison
 
 You may distribute under the terms of either the GNU General Public License
-or the Artistic License, as specified in the Perl README file, with the
-exception that it cannot be placed on a CD-ROM or similar media for commercial
-distribution without the prior approval of the author.
+or the Artistic License, as specified in the Perl README file.
 
 This code is provided with no warranty of any kind, and is used entirely at
 your own risk.
