@@ -7,8 +7,12 @@
   Fix for rt.cpan.org Ticket #=56810 bug with multiple nested cursor from John Scoles 
   Fix for bug found only on Big-Endian hardware reported by Timothy Everett and others from Charles Jardine 
   Fix for memory leak when using prepared_cached and lobs reported by Mark Bobak and Martin Evans found and fixed by John Scoles
-
   Added more entries to the Readmes from John Scoles
+  
+    The Copyright terms for ora_explain have changed and now read as follows:
+    You may distribute under the terms of either the GNU General Public
+    License or the Artistic License, as specified in the Perl README file.
+
 
 =head1 Changes in DBD-Oracle 1.24(svn rev 13793)
 
